Bug 15416 - cldap_ping_list doesn't reset num_requests to 0 on retry
Summary: cldap_ping_list doesn't reset num_requests to 0 on retry
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.18.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-05 09:41 UTC by Stefan Metzmacher
Modified: 2023-08-16 16:57 UTC (History)
3 users (show)

See Also:


Attachments
Patch for v4-18-test (1.14 KB, patch)
2023-07-05 11:21 UTC, Stefan Metzmacher
vl: review+
metze: review? (slow)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-07-05 09:41:29 UTC
Commit 8132edf119757ee91070facffef016c93de9c2a6 introduced a retry loop
arround cldap_multi_netlogon(), but it forgot to reset num_requests to 0
for the retries.
Comment 1 Samba QA Contact 2023-07-05 11:18:03 UTC
This bug was referenced in samba master:

6965e77268e1abfc21f1793c7cd006444938ac03
Comment 2 Stefan Metzmacher 2023-07-05 11:21:53 UTC
Created attachment 17971 [details]
Patch for v4-18-test
Comment 3 Jule Anger 2023-07-06 11:45:45 UTC
Pushed to autobuild-v4-18-test.
Comment 4 Samba QA Contact 2023-07-06 13:02:12 UTC
This bug was referenced in samba v4-18-test:

bdaf1b1c5c344cbd1a2c8b1a29667d6ee885651c
Comment 5 Jule Anger 2023-07-06 13:38:14 UTC
Closing out bug report.

Thanks!
Comment 6 Samba QA Contact 2023-08-16 16:57:14 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.6):

bdaf1b1c5c344cbd1a2c8b1a29667d6ee885651c